# vorker-2

./: .gitignore  Cargo.toml  DEBUG_NOTES.md  README.md  VORKER_DEEP_DIVE.md  package-lock.json  package.json  scaling.md
.cargo/: config.toml
app/: globals.css  layout.tsx  page.tsx
components/: agent-graph.tsx  center-panel.tsx  permission-modal.tsx  review-panel.tsx  theme-context.tsx  workspace-sidebar.tsx
crates/vorker-cli/: Cargo.toml
crates/vorker-cli/src/: adversarial.rs  lib.rs  main.rs  ralph.rs
crates/vorker-cli/tests/: adversarial_output.rs  help.rs  ralph.rs
crates/vorker-core/: Cargo.toml
crates/vorker-core/src/: event_log.rs  events.rs  lib.rs  models.rs  store.rs
crates/vorker-core/tests/: event_log_replay.rs  store_snapshot.rs
crates/vorker-preflight/: Cargo.toml
crates/vorker-preflight/src/: lib.rs
crates/vorker-preflight/tests/: pipeline.rs
crates/vorker-tui/: Cargo.toml
crates/vorker-tui/src/: app.rs  boot.rs  bottom_pane_state.rs  bridge.rs  bridge_helpers.rs  composer_state.rs  demo.rs  diff_reports.rs  lib.rs  mentions.rs  model_picker_state.rs  navigation.rs  popup_state.rs  project_workspace.rs  prompt_context.rs  prompt_history.rs  render.rs  review_output.rs  rich_text.rs  session_event_store.rs  shell_launch.rs  shell_reports.rs  side_agent_store.rs  skill_store.rs  slash.rs  theme.rs  thread_store.rs  transcript_export.rs  workspace_helpers.rs
crates/vorker-tui/src/app/: review_actions.rs  review_runtime.rs  runtime_actions.rs  runtime_support.rs  session_actions.rs  shell_helpers.rs  side_agent_actions.rs  side_agent_helpers.rs  skill_actions.rs  transcript_actions.rs  workflow_actions.rs  workspace_actions.rs
crates/vorker-tui/tests/: app_flow.rs  boot_frame.rs  mentions.rs  navigation.rs  project_workspace.rs  prompt_history_store.rs  render_dashboard.rs  session_event_store.rs  side_agent_store.rs  skill_store.rs  thread_store.rs  transcript_export.rs
docs/: codex-style-tui-agent.md  codex-style-tui-rebuild-prd.md  opencode-ralph-codex-integration-plan.md  vorker-tui-intuitive-ux-flow.md  vorker-tui-ux-ui-diagnosis.md
hooks/: use-vorker.ts
scripts/: generate-dev-cert.sh  run-codex-agent.sh  run-rust-cli.sh  run-rust-tui.sh
src/: cli.js  copilot.js  index.js  orchestrator.js  server.js  share.js  skills.js  tailscale.js  tui.js  tunnel.js
tests/: event-log.test.js  orchestrator-auto-dispatch.test.js  orchestrator-dispatch.test.js  orchestrator-merge.test.js  rust-launcher.test.js  supervisor-store.test.js  (+8 more)
(+20 files in other folders)
