[package]
name = "vorker-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vorker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
vorker-agent = { path = "../vorker-agent" }
vorker-core = { path = "../vorker-core" }
vorker-preflight = { path = "../vorker-preflight" }
vorker-tui = { path = "../vorker-tui" }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.27.0"
