[package]
name = "vorker-preflight"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
toml = "0.9.7"
uuid = { version = "1.18.1", features = ["v4"] }
vorker-core = { path = "../vorker-core" }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
