[package]
name = "vorker-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-client-protocol = { version = "0.10.2", features = ["unstable"] }
async-trait = "0.1.89"
base64 = "0.22.1"
crossterm = "0.29.0"
rustls = "0.23.34"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
vorker-agent = { path = "../vorker-agent" }
vorker-core = { path = "../vorker-core" }
webpki-roots = "0.26.11"
